add players module with router outlet component

--- a/src/app/home/components/home-page/home-page.component.html
+++ b/src/app/home/components/home-page/home-page.component.html
@@ -1,5 +1,10 @@
 <app-header></app-header>
 
 <div class="home">
-    <button mat-raised-button color="accent" (click)="startNewGame()">New Game</button>
+    <button
+        mat-raised-button
+        color="accent"
+        (click)="startNewGame()"
+        class="home__newgame"
+    >New Game</button>
 </div>
