--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,3 +1,3 @@
-<div class="header">
+<div class="header" [ngClass]="{ 'header--withmargin': !hasScoreBar }">
     <h1 class="header__title">Rock Paper Scissors</h1>
 </div>
