--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -1,7 +1,10 @@
 .header {
     background: #7b1fa2;
-    margin-bottom: 2rem;
     padding: 2rem;
+
+    &--withmargin {
+        margin-bottom: 2rem;
+    }
 
     &__title {
         color: white;
