--- a/src/app/shared/components/score/score.component.html
+++ b/src/app/shared/components/score/score.component.html
@@ -1,5 +1,5 @@
 <div class="score">
     <h3 class="score__info">
-        Score: {{ playerOneName }}: {{ playerOneScore }} vs {{ playerTwoName }}: {{ playerTwoScore }}
+        Score: {{ playerOneName }} - {{ playerOneScore }} vs {{ playerTwoName }} - {{ playerTwoScore }}
     </h3>
 </div>
